{
    "name": "TouchSimulationInputs",
    "maps": [
        {
            "name": "TouchSimulation",
            "id": "305dd8ed-ac94-45d6-9024-ba247009df22",
            "actions": [
                {
                    "name": "SimpleClick",
                    "type": "PassThrough",
                    "id": "543d6bf5-dae8-4f46-b16b-36d391268e75",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TwoFingerClick",
                    "type": "PassThrough",
                    "id": "0f2cafca-46f2-4bec-b804-320989b02f37",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThreeFingerClick",
                    "type": "PassThrough",
                    "id": "2961bd88-b02d-4a79-99c6-8c5fe92df0d4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "07504d82-f6af-4869-956c-03b5223dba94",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AlternativeBehaviour",
                    "type": "PassThrough",
                    "id": "12f9fbbd-26dc-456e-a5b6-e05546dcafab",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerPosition",
                    "type": "PassThrough",
                    "id": "e489395d-27e1-42dc-a2a0-6916e20daf39",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerDeltaPosition",
                    "type": "PassThrough",
                    "id": "14c4d8f3-e565-41b7-b4fd-080c7e558188",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8e14f771-609e-48a9-890e-c70409f43123",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SimpleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0eb8527-91c9-470a-bb00-278cba15463d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThreeFingerClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9aa061e4-be55-49a6-9d81-784b0bbe3424",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TwoFingerClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cbdad6e-0a66-49ba-a1ac-0c7c163bc5e5",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04151b9d-a168-4da2-a3bf-7400abf346ed",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AlternativeBehaviour",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee37d554-5158-4d04-b5d9-36f3bea9ee9a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26def8b9-cc51-4426-b99c-8460664cf48e",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerDeltaPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}